// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff-test: roll update == bash oracle > curl happy path → download/extract + setup + changelog, curl argv frozen 1`] = `
{
  "status": 1,
  "stderr": "<TMP>: 12: cp: not found
[roll] Extraction failed. The downloaded archive may be corrupted.
",
  "stdout": "[roll] Current version: roll v<VER>
[roll] Upgrading via curl...

[roll] [roll] Downloading roll v<VER> ...
[roll] [roll] Extracting ...
",
}
`;

exports[`diff-test: roll update == bash oracle > curl happy path → download/extract + setup + changelog, curl argv frozen 2`] = `
"-fsSL
https://github.com/seanyao/roll/archive/refs/tags/v9.9.9.tar.gz
-o
<TMP>/roll.tar.gz
"
`;

exports[`diff-test: roll update == bash oracle > curl version-resolve failure → exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Failed to resolve latest version from GitHub.
You can pin a version with ROLL_VERSION=vX.Y.Z
",
  "stdout": "[roll] Current version: roll v<VER>
[roll] Upgrading via curl...

",
}
`;

exports[`diff-test: roll update == bash oracle > curl version-resolve failure → exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Failed to resolve latest version from GitHub.
You can pin a version with ROLL_VERSION=vX.Y.Z
",
  "stdout": "[roll] 当前版本: roll v<VER>
[roll] 正在通过 curl 升级...

",
}
`;

exports[`diff-test: roll update == bash oracle > npm happy path → upgrade + setup + changelog (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] Current version: roll v<VER>
[roll] Upgrading via npm...


[roll] Re-syncing to AI tools...

  SETUP  ·  初始化                                                                                  
────────────────────────────────────────────────────────────────────────────────

  1. ✓  Install templates & conventions to ~/.roll
  2. ✓  Sync conventions to AI tools
  3. ✓  Install skills to ~/.claude
  4. ✓  Initialize peer-review state directory
  5. ↷  Configure git hooks path
  6. ↷  Ensure tmux is installed (already present)

────────────────────────────────────────────────────────────────────────────────
  Setup complete (4 items refreshed)  —  run roll init inside a project
════════════════════════════════════════════════════════════════════════════════

  No AI agents installed. Run \`roll agent use\` later to set a default, or install one (e.g., claude, kimi, pi).

  → For \`roll release\`: enable "Allow auto-merge" in your repo (Settings → General → Pull Requests),
    or the release will stop and ask you to merge the PR manually.
  → roll release 需要仓库开启 “Allow auto-merge”（Settings → General → Pull Requests），
    否则发版会停下并提示你手动合并 PR。

Recent Changes:

  v<VER> — fixture
    - fixture changelog entry

",
}
`;

exports[`diff-test: roll update == bash oracle > npm happy path → upgrade + setup + changelog (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] 当前版本: roll v<VER>
[roll] 正在通过 npm 升级...


[roll] 正在重新同步到 AI 工具...

  SETUP  ·  初始化                                                                                  
────────────────────────────────────────────────────────────────────────────────

  1. ✓  Install templates & conventions to ~/.roll
  2. ✓  Sync conventions to AI tools
  3. ✓  Install skills to ~/.claude
  4. ✓  Initialize peer-review state directory
  5. ↷  Configure git hooks path
  6. ↷  Ensure tmux is installed (already present)

────────────────────────────────────────────────────────────────────────────────
  Setup complete (4 items refreshed)  —  run roll init inside a project
════════════════════════════════════════════════════════════════════════════════

  未安装 AI agent。请稍后运行 \`roll agent use\` 设置默认，或先安装一个（如 claude、kimi、pi）。

  → For \`roll release\`: enable "Allow auto-merge" in your repo (Settings → General → Pull Requests),
    or the release will stop and ask you to merge the PR manually.
  → roll release 需要仓库开启 “Allow auto-merge”（Settings → General → Pull Requests），
    否则发版会停下并提示你手动合并 PR。

最近更新:

  v<VER> — fixture
    - fixture changelog entry

",
}
`;
